Replaced my broken Netty client with an Apache hc implementation
Tests are sucessfully executed within Maven now